Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-28546

Eventing stats mismatch

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 5.5.0
    • 5.5.0
    • eventing
    • Burrito cluster
      172.16.12.67
      172.16.12.68
      172.16.12.69
      172.16.12.70

    Description

      Build: 5.5.0-2036

      Run the following tests

      • Create 3 handler codes bucket ops, cron timer, doc timer
      • Deploy all the handler codes
      • Create 6M document in all 3 source buckets 

      Observations : Saw couple of mismatch in the stats with destination bucket. Like 

      • DCP_MUTATION_SENT_TO_WORKER =5999999 where documents in destination is 5,993,720 
      • agg_queue_size never coming down
      • on_update_success not matching with number in destination bucket

      [
      {
      "event_processing_stats": {
      "AGG_MESSAGES_SENT_TO_WORKER": 6012898,
      "DCP_MUTATION": 6000000,
      "DCP_MUTATION_SENT_TO_WORKER": 5999999,
      "DCP_SNAPSHOT": 5960153,
      "DCP_STREAMREQ": 1024,
      "EXECUTION_STATS": 3214,
      "FAILURE_STATS": 3214,
      "HANDLER_CODE": 6,
      "LATENCY_STATS": 3214,
      "LCB_EXCEPTION_STATS": 3214,
      "LOG_LEVEL": 6,
      "SOURCE_MAP": 6,
      "THR_COUNT": 6,
      "THR_MAP": 6,
      "V8_INIT": 6,
      "V8_LOAD": 6
      },
      "events_remaining": {
      "dcp_backlog": 1
      },
      "execution_stats": {
      "agg_queue_size": 191,
      "cron_timer_msg_counter": 0,
      "dcp_delete_msg_counter": 0,
      "dcp_mutation_msg_counter": 52035,
      "doc_timer_create_failure": 0,
      "doc_timer_msg_counter": 0,
      "doc_timer_responses_sent": 0,
      "enqueued_cron_timer_msg_counter": 0,
      "enqueued_dcp_delete_msg_counter": 0,
      "enqueued_dcp_mutation_msg_counter": 52226,
      "enqueued_doc_timer_msg_counter": 0,
      "feedback_queue_size": 0,
      "messages_parsed": 53319,
      "on_delete_failure": 0,
      "on_delete_success": 0,
      "on_update_failure": 0,
      "on_update_success": 52031
      },
      "failure_stats": {
      "bucket_op_exception_count": 0,
      "checkpoint_failure_count": 0,
      "n1ql_op_exception_count": 0,
      "timeout_count": 0
      },
      "function_name": "bucket_op_function",
      "lcb_exception_stats": {},
      "planner_stats": [
      {
      "host_name": "172.16.12.67:8096",
      "start_vb": 0,
      "vb_count": 1024
      }
      ],
      "vb_distribution_stats": {
      "172.16.12.67:8096": {
      "worker_bucket_op_function_0": "[0-341]",
      "worker_bucket_op_function_1": "[342-682]",
      "worker_bucket_op_function_2": "[683-1023]"
      }
      },
      "worker_pids": {
      "worker_bucket_op_function_0": 12928,
      "worker_bucket_op_function_1": 12470,
      "worker_bucket_op_function_2": 12469
      }
      },
      {
      "event_processing_stats": {
      "AGG_MESSAGES_SENT_TO_WORKER": 5706925,
      "CRON_TIMER_EVENTS": 5586411,
      "DCP_MUTATION": 5686589,
      "DCP_MUTATION_SENT_TO_WORKER": 5686589,
      "DCP_SNAPSHOT": 813094,
      "DCP_STREAMREQ": 1024,
      "EXECUTION_STATS": 3069,
      "FAILURE_STATS": 3069,
      "HANDLER_CODE": 5,
      "LATENCY_STATS": 3069,
      "LCB_EXCEPTION_STATS": 3069,
      "LOG_LEVEL": 5,
      "SOURCE_MAP": 5,
      "THR_COUNT": 5,
      "THR_MAP": 5,
      "V8_INIT": 5,
      "V8_LOAD": 5
      },
      "events_remaining": {
      "dcp_backlog": 3
      },
      "execution_stats": {
      "agg_queue_size": 0,
      "cron_timer_msg_counter": 5353602,
      "dcp_delete_msg_counter": 0,
      "dcp_mutation_msg_counter": 5346842,
      "doc_timer_create_failure": 0,
      "doc_timer_msg_counter": 0,
      "doc_timer_responses_sent": 0,
      "enqueued_cron_timer_msg_counter": 7688,
      "enqueued_dcp_delete_msg_counter": 0,
      "enqueued_dcp_mutation_msg_counter": 5346842,
      "enqueued_doc_timer_msg_counter": 0,
      "feedback_queue_size": 0,
      "messages_parsed": 5366435,
      "on_delete_failure": 0,
      "on_delete_success": 0,
      "on_update_failure": 0,
      "on_update_success": 5346842
      },
      "failure_stats": {
      "bucket_op_exception_count": 0,
      "checkpoint_failure_count": 0,
      "n1ql_op_exception_count": 0,
      "timeout_count": 0
      },
      "function_name": "cron_timer_op",
      "lcb_exception_stats": {},
      "planner_stats": [
      {
      "host_name": "172.16.12.67:8096",
      "start_vb": 0,
      "vb_count": 1024
      }
      ],
      "vb_distribution_stats": {
      "172.16.12.67:8096": {
      "worker_cron_timer_op_0": "[0-341]",
      "worker_cron_timer_op_1": "[342-682]",
      "worker_cron_timer_op_2": "[683-1023]"
      }
      },
      "worker_pids": {
      "worker_cron_timer_op_0": 12860,
      "worker_cron_timer_op_1": 12746,
      "worker_cron_timer_op_2": 12739
      }
      },
      {
      "event_processing_stats": {
      "ADHOC_DOC_TIMER_RESPONSES_RECEIVED": 197608,
      "AGG_MESSAGES_SENT_TO_WORKER": 12029766,
      "DCP_MUTATION": 12000000,
      "DCP_MUTATION_SENT_TO_WORKER": 6000000,
      "DCP_SNAPSHOT": 11878697,
      "DCP_STREAMREQ": 1024,
      "DOC_TIMER_EVENTS": 6000298,
      "DOC_TIMER_RESPONSES_RECEIVED": 6000000,
      "EXECUTION_STATS": 7355,
      "FAILURE_STATS": 7355,
      "HANDLER_CODE": 6,
      "LATENCY_STATS": 7355,
      "LCB_EXCEPTION_STATS": 7355,
      "LOG_LEVEL": 12,
      "SOURCE_MAP": 6,
      "THR_COUNT": 6,
      "THR_MAP": 6,
      "V8_INIT": 6,
      "V8_LOAD": 6
      },
      "events_remaining": {
      "dcp_backlog": 35941
      },
      "execution_stats": {
      "agg_queue_size": 40228,
      "cron_timer_msg_counter": 0,
      "dcp_delete_msg_counter": 0,
      "dcp_mutation_msg_counter": 3713032,
      "doc_timer_create_failure": 0,
      "doc_timer_msg_counter": 3273414,
      "doc_timer_responses_sent": 3712832,
      "enqueued_cron_timer_msg_counter": 0,
      "enqueued_dcp_delete_msg_counter": 0,
      "enqueued_dcp_mutation_msg_counter": 3733663,
      "enqueued_doc_timer_msg_counter": 3293011,
      "feedback_queue_size": 200,
      "messages_parsed": 7036540,
      "on_delete_failure": 0,
      "on_delete_success": 0,
      "on_update_failure": 0,
      "on_update_success": 3713024
      },
      "failure_stats": {
      "bucket_op_exception_count": 0,
      "checkpoint_failure_count": 0,
      "n1ql_op_exception_count": 0,
      "timeout_count": 0
      },
      "function_name": "doc_timer_op",
      "lcb_exception_stats": {},
      "planner_stats": [
      {
      "host_name": "172.16.12.67:8096",
      "start_vb": 0,
      "vb_count": 1024
      }
      ],
      "vb_distribution_stats": {
      "172.16.12.67:8096": {
      "worker_doc_timer_op_0": "[0-170]",
      "worker_doc_timer_op_1": "[171-341]",
      "worker_doc_timer_op_2": "[342-512]",
      "worker_doc_timer_op_3": "[513-683]",
      "worker_doc_timer_op_4": "[684-853]",
      "worker_doc_timer_op_5": "[854-1023]"
      }
      },
      "worker_pids": {
      "worker_doc_timer_op_0": 12595,
      "worker_doc_timer_op_1": 12618,
      "worker_doc_timer_op_2": 12617,
      "worker_doc_timer_op_3": 12600,
      "worker_doc_timer_op_4": 12596,
      "worker_doc_timer_op_5": 12619
      }
      }
      ]

       

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            Gautham.Banasandra Gautham Banasandra (Inactive)
            vikas.chaudhary Vikas Chaudhary
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty