[MB-28546] Add timestamp along with stats sent to Go

* v8 worker will now add the timestamp to the JSON body of failure and
  execution stats.
* It will also log the failure and execution stats whenever Go sends
  the request.

Change-Id: I3595a52cfb40b2dfa50582866a2c70c86b065272
Reviewed-on: http://review.couchbase.org/90719
Tested-by: Gautham B A <gautham.bangalore@gmail.com>
Reviewed-by: Abhishek Singh <abhishek@couchbase.com>