producer/exported_functions.go
@@ -55,32 +55,48 @@ func (p *Producer) GetLatencyStats() map[string]uint64 {
 }
 
 // GetExecutionStats returns execution stats aggregated from Eventing.Consumer instances
-func (p *Producer) GetExecutionStats() map[string]uint64 {
-	executionStats := make(map[string]uint64)
+func (p *Producer) GetExecutionStats() map[string]interface{} {
+	executionStats := make(map[string]interface{})
+	executionStats["timestamp"] = make(map[int]string)
+
 	for _, c := range p.runningConsumers {
-		ceStats := c.GetExecutionStats()
-		for k, v := range ceStats {
-			if _, ok := executionStats[k]; !ok {
-				executionStats[k] = 0
+		for k, v := range c.GetExecutionStats() {
+			if k == "timestamp" {
+				executionStats["timestamp"].(map[int]string)[c.Pid()] = v.(string)
+				continue
 			}
-			executionStats[k] += v
+
+			if _, ok := executionStats[k]; !ok {
+				executionStats[k] = float64(0)
+			}
+
+			executionStats[k] = executionStats[k].(float64) + v.(float64)
 		}
 	}
+
 	return executionStats
 }
 
 // GetFailureStats returns failure stats aggregated from Eventing.Consumer instances
-func (p *Producer) GetFailureStats() map[string]uint64 {
-	failureStats := make(map[string]uint64)
+func (p *Producer) GetFailureStats() map[string]interface{} {
+	failureStats := make(map[string]interface{})
+	failureStats["timestamp"] = make(map[int]string)
+
 	for _, c := range p.runningConsumers {
-		cfStats := c.GetFailureStats()
-		for k, v := range cfStats {
-			if _, ok := failureStats[k]; !ok {
-				failureStats[k] = 0
+		for k, v := range c.GetFailureStats() {
+			if k == "timestamp" {
+				failureStats["timestamp"].(map[int]string)[c.Pid()] = v.(string)
+				continue
 			}
-			failureStats[k] += v
+
+			if _, ok := failureStats[k]; !ok {
+				failureStats[k] = float64(0)
+			}
+
+			failureStats[k] = failureStats[k].(float64) + v.(float64)
 		}
 	}
+
 	return failureStats
 }
 
